[package]
name = "connector-binance"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-web-socket-client = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-web-socket-client" }
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*" }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
chrono = { version = "*", features = ["serde"] }
rust_decimal = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
hex = "*"
async-trait = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
sha2 = "*"
error-chain = { version = "*", default-features = false }
hmac = "*"
url = "*"
rustls = "0.23.26"
